@@ -1,7 +1,7 @@
 Package: RcppSpdlog
 Type: Package
 Title: R and C++ Interfaces to 'spdlog' C++ Header Library for Logging
-Version: 0.0.8.3
+Version: 0.0.8.4
 Date: 2022-11-01
 License: GPL (>= 2)
 Author: Dirk Eddelbuettel
